# Git-cods

./: CMakeLists.txt
exam1/: Bye-JonaBell.cpp  CMakeLists.txt  b-ternary-3.cpp  reverse.cpp  tictactoe.cpp
homework1/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  CMakeLists.txt
homework1/extra/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt  prime.cpp  super-calculator.cpp
homework2/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt
homework3/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  CMakeLists.txt
homework5/: 2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  CMakeLists.txt
homework6/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp
prctice/: CMakeLists.txt  Hanoi.cpp  calculator.cpp  help.cpp  prime_close.cpp  prime_number1.cpp  prime_number2.cpp  ruishilun.cpp  sqrt.cpp  try.cpp
