
add_executable(calculator calculator.cpp)
add_executable(prime_number1 prime_number1.cpp)
add_executable(prime_number2 prime_number2.cpp)
add_executable(sqrt sqrt.cpp)
add_executable(try try.cpp)
add_executable(prime_close prime_close.cpp)
add_executable(ruishilun ruishilun.cpp)
add_executable(help help.cpp)